--- a/line_webhook/requirements.txt
+++ b/line_webhook/requirements.txt
@@ -4,8 +4,8 @@ google-adk>=1.13.0
 # LINE Bot SDK
 line-bot-sdk>=3.0.0
 
-# Google Cloud Functions
-functions-framework>=3.0.0
+# Flask for Cloud Run
+flask>=2.0.0
 
 # Environment variables
 python-dotenv>=1.0.0
